dropshot/tests/fail/bad_channel5.stderr
error[E0277]: the trait bound `QueryParams: serde::Deserialize<'de>` is not satisfied
  --> tests/fail/bad_channel5.rs:24:14
   |
24 |     _params: Query<QueryParams>,
   |              ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `for<'de> serde_core::de::Deserialize<'de>` is not implemented for `QueryParams`
  --> tests/fail/bad_channel5.rs:13:1
   |
13 | struct QueryParams {
   | ^^^^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `QueryParams` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde_core::de::Deserialize<'de>`:
             &'a [u8]
             &'a camino::Utf8Path
             &'a std::path::Path
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
           and $N others
   = note: required for `QueryParams` to implement `serde_core::de::DeserializeOwned`
note: required by a bound in `dropshot::Query`
  --> src/extractor/query.rs
   |
   | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
   |                             ^^^^^^^^^^^^^^^^ required by this bound in `Query`

error[E0277]: the trait bound `QueryParams: serde::Deserialize<'de>` is not satisfied
  --> tests/fail/bad_channel5.rs:22:1
   |
22 | / async fn bad_channel(
23 | |     _rqctx: RequestContext<()>,
24 | |     _params: Query<QueryParams>,
25 | |     _upgraded: WebsocketConnection,
26 | | ) -> dropshot::WebsocketChannelResult {
   | |_____________________________________^ unsatisfied trait bound
   |
help: the trait `for<'de> serde_core::de::Deserialize<'de>` is not implemented for `QueryParams`
  --> tests/fail/bad_channel5.rs:13:1
   |
13 | struct QueryParams {
   | ^^^^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `QueryParams` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde_core::de::Deserialize<'de>`:
             &'a [u8]
             &'a camino::Utf8Path
             &'a std::path::Path
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
           and $N others
   = note: required for `QueryParams` to implement `serde_core::de::DeserializeOwned`
note: required by a bound in `dropshot::Query`
  --> src/extractor/query.rs
   |
   | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
   |                             ^^^^^^^^^^^^^^^^ required by this bound in `Query`

error[E0277]: the trait bound `QueryParams: serde::Deserialize<'de>` is not satisfied
  --> tests/fail/bad_channel5.rs:18:1
   |
18 | / #[channel {
19 | |     protocol = WEBSOCKETS,
20 | |     path = "/test",
21 | | }]
   | |__^ unsatisfied trait bound
   |
help: the trait `for<'de> serde_core::de::Deserialize<'de>` is not implemented for `QueryParams`
  --> tests/fail/bad_channel5.rs:13:1
   |
13 | struct QueryParams {
   | ^^^^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `QueryParams` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde_core::de::Deserialize<'de>`:
             &'a [u8]
             &'a camino::Utf8Path
             &'a std::path::Path
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
           and $N others
   = note: required for `QueryParams` to implement `serde_core::de::DeserializeOwned`
note: required by a bound in `dropshot::Query`
  --> src/extractor/query.rs
   |
   | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
   |                             ^^^^^^^^^^^^^^^^ required by this bound in `Query`
   = note: this error originates in the attribute macro `channel` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(RequestContext<()>, dropshot::Query<QueryParams>, WebsocketUpgrade) -> impl Future<Output = Result<http::response::Response<Body>, HttpError>> {bad_channel_adapter}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_channel5.rs:22:1
   |
18 | / #[channel {
19 | |     protocol = WEBSOCKETS,
20 | |     path = "/test",
21 | | }]
   | |__- required by a bound introduced by this call
22 |   async fn bad_channel(
   |   ^^^^^ unsatisfied trait bound
   |
   = help: the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<()>, dropshot::Query<QueryParams>, WebsocketUpgrade) -> impl Future<Output = Result<http::response::Response<Body>, HttpError>> {bad_channel_adapter}`
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
